<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySQL Table</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edt_fname">First name</string>
    <string name="edt_lname">Last name</string>
    <string name="edt_age">Age</string>
    <string name="btn_find">Find</string>
    <string name="btn_add">add</string>
    <string name="btn_update">update</string>
    <string name="btn_delete">delete</string>
    <string name="txt_id">id</string>
    <string name="txt_lastname">last name</string>
    <string name="txt_firstname">first name</string>
    <string name="txt_age">age</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_search">Search</string>

</resources>
