<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:id="@+id/lyt_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:background="@drawable/border"
        android:onClick="hideShowSearch"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_search"
            android:gravity="center_horizontal"
            android:paddingTop="3dp"
            android:textColor="#556B2F"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/lyt_searchchild"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_fname"
                android:textColorHint="#F4A460"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_lname"
                android:textColorHint="#F4A460"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edt_age"
                android:textColorHint="#F4A460"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_find"
                android:layout_gravity="center"
                android:background="@drawable/btn_border"
                android:layout_margin="5dp"
                android:textColor="#556B2F"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_scrolltable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@drawable/border">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableLayout
                android:id="@+id/lyt_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

                <TableRow
                    android:id="@+id/main_table_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txt_id"
                        android:textStyle="bold"
                        android:textColor="#556B2F"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txt_lastname"
                        android:textStyle="bold"
                        android:textColor="#556B2F"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txt_firstname"
                        android:textStyle="bold"
                        android:textColor="#556B2F"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/txt_age"
                        android:textStyle="bold"
                        android:textColor="#556B2F"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black" />

                </TableRow>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000" />

            </TableLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyt_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        android:background="@drawable/border"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/btn_add"
            android:background="@drawable/btn_border"
            android:layout_margin="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/btn_update"
            android:background="@drawable/btn_border"
            android:layout_margin="5dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/btn_delete"
            android:background="@drawable/btn_border"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>
